Changed firestore database hierarchy to be more flat. Implemented retrieval of data from firestore on app initialize

--- a/volunteer/src/App.css
+++ b/volunteer/src/App.css
@@ -130,6 +130,9 @@
 .entry:hover{
   background-color: #ffbf00;
 }
+.entry-taskName{
+  font-weight:bold;
+}
 .entry-location,.entry-date-container{
   width:100%;
   font-size:20px;
