--- a/volunteer/src/App.css
+++ b/volunteer/src/App.css
@@ -135,8 +135,9 @@
 }
 .entry-location,.entry-date-container{
   width:100%;
-  font-size:20px;
+  font-size:18px;
   text-align:center;
+  padding:0.5em;
 }
 
 .entry-date-container{
