--- a/volunteer/src/App.css
+++ b/volunteer/src/App.css
@@ -205,11 +205,13 @@
 }
 
 .modal-taskName{
+  text-align:center;
   padding:0.5em;
   font-size:40px;
 }
 
 .modal-location{
+  text-align:center;
   font-size:30px;
 }
 
