--- a/volunteer/src/App.css
+++ b/volunteer/src/App.css
@@ -32,6 +32,15 @@
   font-size:25px;
 }
 
+.inbox{
+  border-left:solid black 1px;
+}
+
+.profile-btn{
+  border-left:solid black 1px;
+  border-right:solid black 1px;
+}
+
 .inbox,.request-help-btn,.profile-btn{
   padding:0.5em;
 }
@@ -48,7 +57,7 @@
   animation:enlarge 1s;
 }
 .profile-btn svg:hover{
-  fill:#009988;;
+  fill:#009988;
 }
 
 .inbox,.profile-btn{
@@ -75,10 +84,52 @@
 .delivery-btn-container{
   display:flex;
   align-items:center;
+  justify-content: center;
   width:100%;
   height:2em;
-  padding:0.25em 0em;
+  padding:0.25em 0em 0em 0em;
+}
 
+.delivery-filter-row{
+  display:flex;
+  justify-content: space-between;
+  width:100%;
+  overflow:hidden;
+}
+
+.filter-options{
+  font-size:15px;
+  border-radius: 5px;
+  border:solid black 2px;
+  padding:0.25em;
+  margin-bottom:0.4em;
+  background-color: #ffec00;
+  box-shadow: 0 4px #999;
+
+}
+
+.filter-options:active {
+  background-color: #7bc62d;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+
+.category-filter-dropdown{
+  display:none;
+  position:absolute;
+  z-index:1;
+  background-color: #000000;
+  color:#ffffff;
+  font-size:25px;
+}
+
+.category{
+
+}
+
+.category:hover{
+  background-color: #ffffff;
+  color:#000000;
 }
 
 .delivery-requests-label, .my-deliveries-label{
@@ -126,6 +177,10 @@
   border-top:solid black 3px;
 }
 
+.entry:active{
+
+}
+
 .entry:hover{
   background-color: #ffbf00;
 }
@@ -164,6 +219,16 @@
 
 .highlight{
   background-color: #ffbf00;
+}
+
+.temp-highlight{
+  
+  animation: fade 1s linear;
+}
+
+@keyframes fade {
+  0%,100%{ background-color:rgb(255,191,0,0)}
+  50%{background-color:rgb(255,191,0,1)}
 }
 
 .EntryModal,.RequestModal{
