--- a/volunteer/src/App.css
+++ b/volunteer/src/App.css
@@ -18,6 +18,11 @@
   height:10vh;
 }
 
+.link{
+  color: inherit;
+  text-decoration: inherit;
+}
+
 .title{
   padding:0.25em 0.25em 0.25em 0.5em;
 
@@ -41,7 +46,15 @@
   border-right:solid black 1px;
 }
 
-.inbox,.request-help-btn,.profile-btn{
+.chat{
+  border-left:solid black 1px;
+}
+
+.chat svg:hover{
+  fill:#fd0061;
+}
+
+.inbox,.request-help-btn,.profile-btn,.chat{
   padding:0.5em;
 }
 
@@ -60,7 +73,7 @@
   fill:#009988;
 }
 
-.inbox,.profile-btn{
+.inbox,.profile-btn,.chat{
   display:flex;
   justify-content: center;
   align-items: center;
@@ -321,11 +334,16 @@
   margin-top:1em;
 }
 
-.modal-submit-btn,.modal-cancel-btn{
+.modal-submit-btn,.modal-cancel-btn,.modal-chat-btn{
   border:solid black 1px;
   margin:0.5em;
   padding:0.25em;
+
 } 
+
+.modal-chat-btn:hover{
+  background-color: #00abfb;
+}
 .modal-submit-btn:hover{
   background-color: #7bc62d;
 }
@@ -451,4 +469,20 @@
   font-family: sans-serif;
   font-size: 0.8rem;
   z-index:1;
+}
+
+.Chat{
+  width:100vw;
+  height:100vh;
+}
+
+.chat-panel{
+  width:25vw;
+  height:100%;
+  border-right:solid black 2px;
+  font-size:30px;
+}
+
+.chat-panel-header{
+  text-align:center;
 }
