--- a/volunteer/src/App.css
+++ b/volunteer/src/App.css
@@ -377,12 +377,12 @@
 .request-category-container{
   display:flex;
   flex-wrap:wrap;
-  width:15vw;
+  width:7vw;
   justify-content: center;
   align-items: center;
   padding:0.25em;
   border: solid black 1px;
-  font-size:30px;
+  font-size:15px;
   margin:0.05em;
   background-color: white;
 }
@@ -405,11 +405,18 @@
   50%{transform:scale(1.15);}
   100%{transform:scale(1);}
 }
-.request-location-container,.request-details-container,.request-date-container{
+.request-location-container,.request-details-container,.request-date-container,.donation-container{
   display:flex;
   justify-content: flex-start;
+  flex-wrap:wrap;
   width:100%;
   padding:0.25em;
+}
+
+.donation-amount-container{
+  display:flex;
+  width:100%;
+  justify-content: center;
 }
 
 .request-delivery-btn-container{
@@ -418,11 +425,52 @@
   width:100%;
   padding:0.25em;
 }
-.request-location-label,.request-details-label,.request-date-label{
+.request-location-label,.request-details-label,.request-date-label,.donation-option-label{
   text-align:right;
   font-size:30px;
   width:5em;
   margin-right:0.5em;
+}
+
+.donation-form{
+  display:flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.donation-form input, .charity-form input {
+  margin:0.5em;
+}
+
+.donation-options, .charity-options,.donation-amount-label{
+  font-size:25px;
+}
+
+.charity-form{
+  display:flex;
+  justify-content: center;
+  width:100%;
+}
+
+.charity-form-container{
+  text-align:center;
+  margin:0.5em;
+  border: solid black 1px;
+}
+
+.charity-form-btn-container{
+  display:flex;
+  justify-content: center;
+}
+
+.charity-options-pic{
+  width:200px;
+  height:auto;
+}
+
+.charity-options{
+  width:100%;
+
 }
 
 .request-details-date{
