Fixed my requests tab bug. Fixed styling of chat messages.

--- a/volunteer/src/App.css
+++ b/volunteer/src/App.css
@@ -556,7 +556,7 @@
 .chat-window-messages{
   display:flex;
   flex-wrap:wrap;
-  align-items: flex-start;
+  align-content: flex-start;
   overflow-y:auto;
   height:70vh;
 
