--- a/volunteer/src/App.css
+++ b/volunteer/src/App.css
@@ -244,6 +244,7 @@
 }
 
 .entry-status{
+  float:left;
   font-size: 0.75em;
   border: solid black 2px;
   margin: 0.25em;
@@ -254,6 +255,24 @@
   padding-right:0.5em;
   color:black;
 
+}
+
+.accepted{
+  background-color: #7bc62d;
+}
+
+.pending{
+  background-color: #9e9e9e;
+}
+.entry-volunteer-num{
+  float:right;
+  font-size: 0.75em;
+  margin: 0.25em;
+  padding-top:0.15em;
+  padding-bottom:0.15em;
+  padding-left:0.5em;
+  padding-right:0.5em;
+  color:green;
 }
 
 .highlight{
