--- a/volunteer/src/App.css
+++ b/volunteer/src/App.css
@@ -257,12 +257,12 @@
 
 }
 
-.accepted{
-  background-color: #7bc62d;
+.filled{
+  background-color: #ff4500;
 }
 
-.pending{
-  background-color: #9e9e9e;
+.open{
+  background-color: #7bc62d;
 }
 .entry-volunteer-num{
   float:right;
@@ -273,6 +273,10 @@
   padding-left:0.5em;
   padding-right:0.5em;
   color:green;
+}
+
+.entry-status-details{
+  padding-top:1em;
 }
 
 .highlight{
