--- a/volunteer/src/App.css
+++ b/volunteer/src/App.css
@@ -486,6 +486,19 @@
   justify-content: center;
 }
 
+.charity-container{
+  width: 100%;
+  text-align: center;
+  margin: 0.5em;
+}
+
+.modal-donation-amount{
+  width: 100%;
+  text-align: center;
+  font-size: 50px;
+  margin: .75em;
+}
+
 .request-delivery-btn-container{
   display:flex;
   justify-content: center;
