--- a/volunteer/src/App.css
+++ b/volunteer/src/App.css
@@ -9,6 +9,10 @@
   overflow: hidden;
 }
 
+.firebaseui-list-item{
+  font-size: 30px;
+}
+
 .Header{
   display:flex;
   justify-content: center;
@@ -54,8 +58,12 @@
   fill:#fd0061;
 }
 
-.inbox,.request-help-btn,.profile-btn,.chat{
+.inbox,.request-help-btn,.profile-btn,.chat,.log-out{
   padding:0.5em;
+}
+
+.log-out:hover{
+ 
 }
 
 .inbox svg:hover{
