--- a/volunteer/src/App.css
+++ b/volunteer/src/App.css
@@ -638,10 +638,20 @@
 }
 
 .chat-window-top-bar{
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width:100%;
-  height:10vh;
+  height:12vh;
   text-align:center; 
   border-bottom:solid black 2px;
+}
+
+.chat-window-top-bar-pic{
+  height: 6vh;
+  width: 6vh;
+  border-radius: 50%;
+  margin: 0.5em;
 }
 
 .chat-window-messages{
